--- a/header.html
+++ b/header.html
@@ -10,8 +10,9 @@
 
 
 
-	<link rel="stylesheet" type="text/css" href="index.css">
-	<script src="index.js"></script>
+
+	<link rel="stylesheet" type="text/css" href="header.css">
+	<script src="header.js"></script>
     <div class="header">
         <div class="box">
             <div class="control">
