--- a/itemlist.html
+++ b/itemlist.html
@@ -45,6 +45,7 @@
 
 <div class="navibar">
     <a href="../Shop"><span class="home">&nbsp;</span></a>
+    <span class="flag">&nbsp;</span>
     <%--
 		<a href="#path">測試位置</a>
 		<span class="flag">&nbsp;</span>
@@ -147,7 +148,6 @@
 	</div>
     --%>
 </div>
-
 
 
 
