--- a/header.html
+++ b/header.html
@@ -85,6 +85,7 @@
                         </div>
                     </div>
                 </div>
+                <a href="../Shop" class="logolonk"></a>
             </div>
             <div class="shadow">&nbsp;</div>
         </div>
